--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login - Forty Seven Laundry</title>
+    <title>Forgot Password - Forty Seven Laundry</title>
     <link
       href="{{ url_for('static', filename='img/asset/logo.png') }}"
       rel="icon" />
@@ -49,6 +49,39 @@
         color: var(--primary);
       }
     </style>
+    <script>
+      function kirim() {
+        const nomor = $("#nomor").val();
+
+        if (!nomor) {
+          $("#modalMessageW").text("Mohon masukan Nomor whatsapp");
+          $("#warningModal").modal("show");
+          return;
+        }
+
+        fetch("/send_otp_forgot", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify({ nomor: nomor }),
+        })
+          .then((response) => response.json())
+          .then((Data) => {
+            if (Data.status === "success") {
+              window.location.href = `/validate_otp_forgot?nomor=${nomor}`;
+            } else {
+              $("#modalMessageW").text(Data.msg);
+              $("#warningModal").modal("show");
+            }
+          })
+          .catch((error) => {
+            console.error("Error:", error);
+            $("#modalMessageE").text("Terjadi kesalahan saat mengirim OTP.");
+            $("#errorModal").modal("show");
+          });
+      }
+    </script>
   </head>
   <body>
     <div class="container">
@@ -62,76 +95,44 @@
                 <div
                   class="col-lg-6 d-none d-lg-block bg-gradient-custom position-relative">
                   <img
-                    src="{{ url_for('static', filename='img/asset/Login-pana.png') }}"
+                    src="{{ url_for('static', filename='img/asset/Forgot password-cuate.png') }}"
                     alt=""
                     class="img-fluid" />
                 </div>
                 <div class="col-lg-6">
                   <div class="p-5">
                     <div class="text-center">
-                      <h1 class="h4 text-gray-900 mb-4">
-                        Selamat Datang kembali!
-                      </h1>
+                      <h1 class="h4 text-gray-900 mb-4">Kamu lupa password?</h1>
+                      <p class="mb-4">
+                        Kami mengerti, hal-hal seperti ini bisa saja terjadi.
+                        Cukup masukkan Nomor whatsapp Anda di bawah ini dan kami
+                        akan mengirimkan Kode OTP untuk mengatur ulang kata
+                        sandi Anda!
+                      </p>
                     </div>
-                    {% with messages =
-                    get_flashed_messages(with_categories=true) %} {% if messages
-                    %}
-                    <ul>
-                      {% for category, message in messages %}
-                      <li class="alert alert-{{ category }}">{{ message }}</li>
-                      {% endfor %}
-                    </ul>
-                    {% endif %} {% endwith %}
-                    <form method="POST">
-                      <div class="form-group">
-                        <input
-                          type="email"
-                          class="form-control form-control-user"
-                          aria-describedby="emailHelp"
-                          placeholder="Enter Email Address..."
-                          id="email"
-                          name="email"
-                          required />
-                      </div>
-                      <div class="form-group">
-                        <input
-                          type="password"
-                          class="form-control form-control-user"
-                          id="exampleInputPassword"
-                          placeholder="Password"
-                          id="password"
-                          name="password"
-                          required />
-                      </div>
-                      <div class="form-group">
-                        <div class="custom-control custom-checkbox small">
-                          <input
-                            type="checkbox"
-                            class="custom-control-input"
-                            id="customCheck" />
-                          <label class="custom-control-label" for="customCheck"
-                            >Remember Me</label
-                          >
-                        </div>
-                      </div>
-                      <button
-                        type="submit"
-                        class="btn btn-costum btn-user btn-block">
-                        Login
-                      </button>
-                      <hr />
-                    </form>
+                    <div class="form-group">
+                      <input
+                        type="number"
+                        class="form-control form-control-user"
+                        placeholder="Masukan Nomor whatsapp"
+                        id="nomor"
+                        name="nomor"
+                        required />
+                    </div>
+                    <button
+                      type="submit"
+                      class="btn btn-costum btn-user btn-block"
+                      onclick="kirim()">
+                      Reset Password
+                    </button>
                     <hr />
-                    <div class="text-center">
-                      <a class="small" href="/forgot_password"
-                        >Lupa Password?</a
-                      >
-                    </div>
                     <div class="text-center">
                       <a class="small" href="/register">Buat Akun!</a>
                     </div>
                     <div class="text-center">
-                      <a class="small" href="/">Kembali Ke Home</a>
+                      <a class="small" href="/login"
+                        >Sudah punya akun? Login!</a
+                      >
                     </div>
                   </div>
                 </div>
@@ -141,6 +142,8 @@
         </div>
       </div>
     </div>
+
+    {% include 'modal_SEW.html' %}
 
     <!-- Bootstrap core JavaScript-->
     <script src="{{ url_for('static', filename='vendor/jquery/jquery.min.js') }}"></script>
