--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login - Forty Seven Laundry</title>
+    <title>Reset Password - Forty Seven Laundry</title>
     <link
       href="{{ url_for('static', filename='img/asset/logo.png') }}"
       rel="icon" />
@@ -49,6 +49,50 @@
         color: var(--primary);
       }
     </style>
+    <script>
+      function reset_password(nomor) {
+        let new_password = $("#new_password").val();
+        let new_password_confirmation = $("#new_password_confirmation").val();
+
+        $.ajax({
+          type: "POST",
+          url: "/reset_password",
+          data: {
+            nomor: nomor,
+            new_password: new_password,
+            new_password_confirmation: new_password_confirmation,
+          },
+          success: function (response) {
+            if (response.status === "success") {
+              $("#modalMessage").text(response.msg);
+              $("#successModal").modal("show");
+              $("#successModal").on("hidden.bs.modal", function () {
+                window.location.href = "/login";
+              });
+            } else if (response.status === "error") {
+              $("#modalMessageE").text(response.msg);
+              $("#errorModal").modal("show");
+              $("#errorModal").on("hidden.bs.modal", function () {
+                window.location.reload();
+              });
+            } else {
+              $("#modalMessageW").text(response.msg);
+              $("#warningModal").modal("show");
+              $("#warningModal").on("hidden.bs.modal", function () {
+                window.location.reload();
+              });
+            }
+          },
+          error: function (xhr) {
+            let errorMessage = xhr.responseJSON
+              ? xhr.responseJSON.msg
+              : "Terjadi kesalahan";
+            $("#modalMessageE").text(errorMessage);
+            $("#errorModal").modal("show");
+          },
+        });
+      }
+    </script>
   </head>
   <body>
     <div class="container">
@@ -62,77 +106,40 @@
                 <div
                   class="col-lg-6 d-none d-lg-block bg-gradient-custom position-relative">
                   <img
-                    src="{{ url_for('static', filename='img/asset/Login-pana.png') }}"
+                    src="{{ url_for('static', filename='img/asset/Reset password-cuate.png') }}"
                     alt=""
                     class="img-fluid" />
                 </div>
                 <div class="col-lg-6">
                   <div class="p-5">
                     <div class="text-center">
-                      <h1 class="h4 text-gray-900 mb-4">
-                        Selamat Datang kembali!
-                      </h1>
+                      <h1 class="h4 text-gray-900 mb-4">Buat password baru</h1>
+                      <p class="mb-4">
+                        Buat password baru dan jangan lupa lagi yak!
+                      </p>
                     </div>
-                    {% with messages =
-                    get_flashed_messages(with_categories=true) %} {% if messages
-                    %}
-                    <ul>
-                      {% for category, message in messages %}
-                      <li class="alert alert-{{ category }}">{{ message }}</li>
-                      {% endfor %}
-                    </ul>
-                    {% endif %} {% endwith %}
-                    <form method="POST">
-                      <div class="form-group">
-                        <input
-                          type="email"
-                          class="form-control form-control-user"
-                          aria-describedby="emailHelp"
-                          placeholder="Enter Email Address..."
-                          id="email"
-                          name="email"
-                          required />
-                      </div>
-                      <div class="form-group">
+                    <div class="form-group row">
+                      <div class="col-sm-6 mb-3 mb-sm-0">
                         <input
                           type="password"
                           class="form-control form-control-user"
-                          id="exampleInputPassword"
-                          placeholder="Password"
-                          id="password"
-                          name="password"
-                          required />
+                          id="new_password"
+                          placeholder="Masukan Password Baru" />
                       </div>
-                      <div class="form-group">
-                        <div class="custom-control custom-checkbox small">
-                          <input
-                            type="checkbox"
-                            class="custom-control-input"
-                            id="customCheck" />
-                          <label class="custom-control-label" for="customCheck"
-                            >Remember Me</label
-                          >
-                        </div>
+                      <div class="col-sm-6">
+                        <input
+                          type="password"
+                          class="form-control form-control-user"
+                          id="new_password_confirmation"
+                          placeholder="Ulangi Password" />
                       </div>
-                      <button
-                        type="submit"
-                        class="btn btn-costum btn-user btn-block">
-                        Login
-                      </button>
-                      <hr />
-                    </form>
-                    <hr />
-                    <div class="text-center">
-                      <a class="small" href="/forgot_password"
-                        >Lupa Password?</a
-                      >
                     </div>
-                    <div class="text-center">
-                      <a class="small" href="/register">Buat Akun!</a>
-                    </div>
-                    <div class="text-center">
-                      <a class="small" href="/">Kembali Ke Home</a>
-                    </div>
+                    <button
+                      type="submit"
+                      class="btn btn-costum btn-user btn-block"
+                      onclick="reset_password('{{ nomor }}')">
+                      Reset
+                    </button>
                   </div>
                 </div>
               </div>
@@ -141,6 +148,8 @@
         </div>
       </div>
     </div>
+
+    {% include 'modal_SEW.html' %}
 
     <!-- Bootstrap core JavaScript-->
     <script src="{{ url_for('static', filename='vendor/jquery/jquery.min.js') }}"></script>
