--- a/templates/dataContact.html
+++ b/templates/dataContact.html
@@ -143,8 +143,10 @@
                     {% if data %}
                         <div class="form-group">
                             <label for="nomor" class="form-label">Nomor telepone/whatsApp</label>
-                            <input type="number" class="form-control form-control-user" name="nomor" id="nomor"
-                                placeholder="0893293829" value="{{ data.nomor }}" required>
+                            <div class="input-group mb-3">
+                                <span class="input-group-text" id="basic-addon1">+62</span>
+                                <input type="number" value="{{ data.nomor }}" class="form-control" placeholder="8382387238" aria-label="Username" aria-describedby="basic-addon1" name="nomor" id="nomor" required>
+                            </div>
                         </div>
                         <div class="form-group">
                             <label for="email" class="form-label">Email Perusahaan</label>
@@ -226,18 +228,20 @@
                     {% else %}
                         <div class="form-group">
                             <label for="nomor" class="form-label">Nomor telepone/whatsApp</label>
-                            <input type="number" class="form-control form-control-user" name="nomor" id="nomor"
-                                placeholder="Forty Seven Laundry" required>
+                            <div class="input-group mb-3">
+                                <span class="input-group-text" id="basic-addon1">+62</span>
+                                <input type="number" class="form-control" placeholder="8382387238" aria-label="Username" aria-describedby="basic-addon1" name="nomor" id="nomor" required>
+                            </div>
                         </div>
                         <div class="form-group">
                             <label for="email" class="form-label">Email Perusahaan</label>
                             <input type="text" class="form-control form-control-user" name="email" id="email"
-                                placeholder="Forty Seven Laundry" required>
+                                placeholder="contoh@gmail.com" required>
                         </div>
                         <div class="form-group">
                             <label for="alamat" class="form-label">Alamat Perusahaan</label>
                             <input type="text" class="form-control form-control-user" name="alamat" id="alamat"
-                                placeholder="Forty Seven Laundry" required>
+                                placeholder="jln.Sukarati no.10" required>
                         </div>
                         <div class="row form-group">
                             <label for="alamat" class="form-label">Hari Buka</label>
@@ -292,9 +296,9 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="maps" class="form-label">Link maps</label>
+                            <label for="maps" class="form-label">Link maps(iframe)</label>
                             <input type="text" class="form-control form-control-user" name="maps" id="maps"
-                                placeholder="skaks" required>
+                                placeholder="iframe" required>
                         </div>
 
                         <button type="submit" class="btn btn-costum w-100" onclick="tambahContact()" >
