--- a/templates/promo.html
+++ b/templates/promo.html
@@ -1,133 +1,171 @@
-{% extends "main.html" %}
-{% block title %}Promo - Forty Seven Laundry{% endblock %} 
-{% block header %}
+{% extends "main.html" %} {% block title %}Promo - Forty Seven Laundry{%
+endblock %} {% block header %}
 <h1>Promo Khusus Laundry</h1>
 <p>Manfaatkan penawaran terbatas kami untuk layanan terbaik!</p>
-{% endblock %}
-{% block content %}
+{% endblock %} {% block content %}
 <style>
-    .pagination {
-        background-color: #f8f9fa;
-    }
-    .pagination .page-item.active .page-link {
-        background-color: #f9d71c;
-        border-color: #f9d71c;
-        color: white;
-    }
-    .pagination .page-link:hover {
-        background-color: #e6c100;
-        border-color: #e6c100;
-    }
-    .pagination .page-link {
-        color: #f9d71c;
-        border: 1px solid #f9d71c;
-    }
-    .pagination .page-item.disabled .page-link {
-        color: #f9d71c;
-        background-color: #e9ecef;
-        border-color: #f9d71c;
-    }
+  .pagination {
+    background-color: #f8f9fa;
+  }
+  .pagination .page-item.active .page-link {
+    background-color: #f9d71c;
+    border-color: #f9d71c;
+    color: white;
+  }
+  .pagination .page-link:hover {
+    background-color: #e6c100;
+    border-color: #e6c100;
+  }
+  .pagination .page-link {
+    color: #f9d71c;
+    border: 1px solid #f9d71c;
+  }
+  .pagination .page-item.disabled .page-link {
+    color: #f9d71c;
+    background-color: #e9ecef;
+    border-color: #f9d71c;
+  }
 
-    .modal .btn {
-      background-color: #f9d71c;
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 4px;
-      cursor: pointer;
-      font-size: 14px;
-      transition: background-color 0.3s;
-    }
+  .modal .btn {
+    background-color: #f9d71c;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 14px;
+    transition: background-color 0.3s;
+  }
 
-    .modal .btn:hover {
-      background-color: #e6c100;
-    }
+  .modal .btn:hover {
+    background-color: #e6c100;
+  }
 </style>
 
+<!-- Promo -->
+<section class="promo-intro">
+  <div class="container">
+    <h2>Yuk cepetan cek promo spesial kami</h2>
+    <p>
+      Semakin mudah dan hemat dengan berbagai macam promo laundry di Forty Seven
+      Laundry Pku. Hubungi kontak kami, dan ambil promonya sekarang juga!!!
+    </p>
+    <div class="arrows">
+      <span>&#x2193;</span>
+      <span>&#x2193;</span>
+      <span>&#x2193;</span>
+    </div>
+  </div>
+</section>
 
-    <!-- Promo -->
-    <section class="promo-intro">
-        <div class="container">
-            <h2>Yuk cepetan cek promo spesial kami</h2>
-            <p>Semakin mudah dan hemat dengan berbagai macam promo laundry di Forty Seven Laundry Pku. Hubungi kontak
-                kami, dan ambil promonya sekarang juga!!!</p>
-            <div class="arrows">
-                <span>&#x2193;</span>
-                <span>&#x2193;</span>
-                <span>&#x2193;</span>
+<!-- Price List -->
+<section class="price-list mb-3">
+  <h2 class="subtitle">Promo Paket Laundry</h2>
+  <div class="container">
+    <div class="cards row">
+      {% for pro in promo %}
+      <div
+        class="col-12 col-md-4"
+        data-toggle="modal"
+        data-target="#datailPromoModal{{ pro._id }}">
+        <div class="card">
+          {% if pro.foto %}
+          <img
+            class="card-img-to"
+            src="{{ url_for('static', filename='img/promo/' + pro.foto) }}" />
+          {% else %}
+          <img
+            class="card-img-to"
+            src="{{ url_for('static', filename='img/undraw_profile.svg') }}" />
+          {% endif %}
+          <div class="card-body">
+            <h4 class="text-center">{{ pro.judul | limit_taxt(4) }}</h4>
+            <p class="text-center" style="color: #fbce19">
+              Berlaku sampai : {{ pro.tanggal_berakhir | format_date }}
+            </p>
+            <p>{{ pro.deskripsi | remove_html | limit_taxt(10) }}</p>
+            <div class="text-center">
+              {% if contact.nomor %}
+              <a
+                href="https://wa.me/62{{ contact.nomor }}?text=Halo%20Forty%20Seven%20Laundry,%20saya%20mau%20pesan%20layanan"
+                class="btn btn-secondary text"
+                >Pesan Sekarang</a
+              >
+              {% else %}
+              <a
+                href="https://wa.me/6282173515200?text=Halo%20Forty%20Seven%20Laundry,%20saya%20mau%20pesan%20layanan"
+                class="btn btn-secondary"
+                >Pesan Sekarang</a
+              >
+              {% endif %}
             </div>
+          </div>
         </div>
-    </section>
-
-    <!-- Price List -->
-    <section class="price-list mb-3">
-        <h2 class="subtitle">Promo Paket Laundry</h2>
-        <div class="container">
-            <div class="cards row">
-                {% for pro in promo %}
-                    <div class="col-12 col-md-4" data-toggle="modal" data-target="#datailPromoModal{{ pro._id }}">
-                        <div class="card">
-                          {% if pro.foto %}
-                          <img class="card-img-to" src="{{ url_for('static', filename='img/promo/' + pro.foto) }}">
-                          {% else %}
-                          <img class="card-img-to" src="{{ url_for('static', filename='img/undraw_profile.svg') }}">
-                          {% endif %}
-                          <div class="card-body">
-                              <h4 class="text-center">{{ pro.judul }}</h4>
-                              <p class="text-center" style="color: #fbce19;">Berlaku sampai : {{ pro.tanggal_berakhir | format_date }}</p>
-                              <p>{{ pro.deskripsi | remove_html | limit_taxt(10) }}</p>
-                              <div class="text-center">
-                                  {% if contact.nomor %}
-                                      <a href="https://wa.me/62{{ contact.nomor }}?text=Halo%20Forty%20Seven%20Laundry,%20saya%20mau%20pesan%20layanan" class="btn btn-secondary text">Pesan Sekarang</a>
-                                  {% else %}
-                                      <a href="https://wa.me/6282173515200?text=Halo%20Forty%20Seven%20Laundry,%20saya%20mau%20pesan%20layanan" class="btn btn-secondary">Pesan Sekarang</a>
-                                  {% endif %}
-                              </div>
-
-                          </div>
-                        </div>
-                    </div>
-                    <!-- Modal -->
-                    <div class="modal fade" id="datailPromoModal{{ pro._id }}" tabindex="-1" aria-labelledby="responseModalLabel" aria-hidden="true">
-                      <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
-                        <div class="modal-content">
-                          <div class="modal-body row">
-                              <div class="col-12 col-sm-4">
-                                  {% if pro.foto %}
-                                  <img class="img-fluid" src="{{ url_for('static', filename='img/promo/' + pro.foto) }}">
-                                  {% else %}
-                                  <img class="img-fluid" src="{{ url_for('static', filename='img/undraw_profile.svg') }}">
-                                  {% endif %}
-                              </div>
-                              <div class="col">
-                                  <div class="row mt-3 ms-2">
-                                      <div class="col-10">
-                                          <h4 class="">{{ pro.judul }}</h4>
-                                          <p class="" style="color: #fbce19;">Berlaku sampai : {{ pro.tanggal_berakhir | format_date }}</p>
-                                      </div>
-                                      <div class="col">
-                                          <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close"></button>
-                                      </div>
-                                  </div>
-                                <p>{{ pro.deskripsi | safe }}</p>
-                                <div class="">
-                                    {% if contact.nomor %}
-                                        <a href="https://wa.me/62{{ contact.nomor }}?text=Halo%20Forty%20Seven%20Laundry,%20saya%20mau%20pesan%20layanan" target="_blank" class="btn btn-secondary ms-3">Pesan Sekarang</a>
-                                    {% else %}
-                                        <a href="https://wa.me/6282173515200?text=Halo%20Forty%20Seven%20Laundry,%20saya%20mau%20pesan%20layanan" target="_blank" class="btn btn-secondary ms-3">Pesan Sekarang</a>
-                                    {% endif %}
-                                </div>
-                              </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                {% endfor %}
-                <div class="d-flex justify-content-center">
-                    {{ pagination.links }}
+      </div>
+      <!-- Modal -->
+      <div
+        class="modal fade"
+        id="datailPromoModal{{ pro._id }}"
+        tabindex="-1"
+        aria-labelledby="responseModalLabel"
+        aria-hidden="true">
+        <div
+          class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
+          <div class="modal-content">
+            <div class="modal-body row">
+              <div class="col-12 col-sm-4">
+                {% if pro.foto %}
+                <img
+                  class="img-fluid"
+                  src="{{ url_for('static', filename='img/promo/' + pro.foto) }}" />
+                {% else %}
+                <img
+                  class="img-fluid"
+                  src="{{ url_for('static', filename='img/undraw_profile.svg') }}" />
+                {% endif %}
+              </div>
+              <div class="col">
+                <div class="row mt-3 ms-2">
+                  <div class="col-10">
+                    <h4 class="">{{ pro.judul }}</h4>
+                    <p class="" style="color: #fbce19">
+                      Berlaku sampai : {{ pro.tanggal_berakhir | format_date }}
+                    </p>
+                  </div>
+                  <div class="col">
+                    <button
+                      type="button"
+                      class="btn-close"
+                      data-dismiss="modal"
+                      aria-label="Close"></button>
+                  </div>
                 </div>
+                <p>{{ pro.deskripsi | safe }}</p>
+                <div class="">
+                  {% if contact.nomor %}
+                  <a
+                    href="https://wa.me/62{{ contact.nomor }}?text=Halo%20Forty%20Seven%20Laundry,%20saya%20mau%20pesan%20layanan"
+                    target="_blank"
+                    class="btn btn-secondary ms-3"
+                    >Pesan Sekarang</a
+                  >
+                  {% else %}
+                  <a
+                    href="https://wa.me/6282173515200?text=Halo%20Forty%20Seven%20Laundry,%20saya%20mau%20pesan%20layanan"
+                    target="_blank"
+                    class="btn btn-secondary ms-3"
+                    >Pesan Sekarang</a
+                  >
+                  {% endif %}
+                </div>
+              </div>
             </div>
+          </div>
         </div>
-    </section>
+      </div>
+      {% endfor %}
+      <div class="d-flex justify-content-center">{{ pagination.links }}</div>
+    </div>
+  </div>
+</section>
 {% endblock %}
-    
